<resources>
    <string name="app_name">FinalTest</string>
    <string name="txtview_create_an_account">Create an Account?\n</string>
    <string name="btn_register_here">Register Here\n</string>
    <string name="btn_login">Login\n</string>
    <string name="edittext_enter_your_password">Enter Your Password\n</string>
    <string name="txtview_password">Password\n</string>
    <string name="edittext_enter_your_username">Enter your Email Id\n</string>
    <string name="txtview_username">Email Id\n</string>
    <string name="label_movie_app_login">Famous People App Login\n</string>
    <string name="register_here">Register Here</string>
    <string name="no_account">No Account?</string>
    <string name="login">Login</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">password</string>
    <string name="enter_your_email_id">Enter your email Id</string>
    <string name="email_id">Email Id</string>
    <string name="famous_people_app_login">Famous People App Login</string>
    <string name="app_register">App Register</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="email_id_register">Email Id</string>
    <string name="enter_email_id">Enter Email id</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="password_register">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">Enter confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="login_register">Login</string>
    <string name="achievements">Achievements</string>
    <string name="bio">Bio</string>
    <string name="birthplace">BirthPlace</string>
    <string name="birthdate">Birthdate</string>
    <string name="nationality">Nationality</string>
    <string name="occupation">Occupation</string>
    <string name="name">Name</string>
    <string name="famous_people_id">Famous people ID</string>
    <string name="edit_famous_people">Edit Famous People</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="x">X</string>
    <string name="favourite_famous_npeople">Favourite Famous \nPeople</string>
    <string name="plus">+</string>
</resources>