<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FamousPeopleListActivity">

    <androidx.appcompat.widget.AppCompatButton
      android:background="@drawable/bg_btn_register"
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/x"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/txtViewFavouriteMovies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtViewFavouriteMovies" />

    <TextView
        android:id="@+id/txtViewFavouriteMovies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:text="@string/favourite_famous_npeople"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/btnAdd"
        app:layout_constraintStart_toEndOf="@id/btnClose"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtViewFavouriteMovies" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:background="@drawable/bg_btn_register"
        app:layout_constraintBottom_toBottomOf="@id/txtViewFavouriteMovies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtViewFavouriteMovies"
        app:layout_constraintTop_toTopOf="@id/txtViewFavouriteMovies" />

</androidx.constraintlayout.widget.ConstraintLayout>